[project]
name = "httprouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guillaume Charbonnier", email = "gcharbonnier@fieldbox.ai" },
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi"]
starlette = ["starlette"]
litestar = ["litestar"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "httpx>=0.28.1",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "ruff>=0.9.4",
    "uvicorn>=0.34.0",
]
